<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="main_image_description">Main Image for Load App</string>

    <string name="glide_title">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_title">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square Inc</string>

    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="ok">OK</string>
</resources>
