<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/fileNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/file_name_label"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/fileNameValue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fileNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:lineSpacingExtra="0sp"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileNameLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/load_app_title" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/status_label"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/statusValue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/statusLabel"
        app:layout_constraintTop_toBottomOf="@+id/fileNameValue"
        tools:text="Success" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="16sp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>